<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_menu_save"
        android:icon="@drawable/ic_save_floppy_disk"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/action_mail"
        android:orderInCategory="100"
        android:title="@string/all_mail"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contacts"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/all_contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/all_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/all_logout"
        app:showAsAction="never" />


</menu>