<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/item_menu_view_group"
        android:icon="@drawable/ic_remove_red_eye_black_24dp"
        android:title=""
        app:showAsAction="always" />



    <item
        android:id="@+id/se_actionBar_search"
        android:icon="@drawable/ic_zoom_white"
        android:title="@string/all_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />


    <item
        android:id="@+id/item_menu_choose"
        android:icon="@drawable/ic_check_black_24dp"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/item_menu_send"
        android:icon="@drawable/ic_mail"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/item_menu_recyclebin"
        android:icon="@drawable/ic_action_delete"
        android:title=""
        app:showAsAction="always" />





    <item
        android:id="@+id/action_mail"
        android:orderInCategory="100"
        android:title="@string/all_mail"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/all_settings"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/all_logout"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="never" />
</menu>
