<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/settings_public_keys"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/size_subtitle_text_medium" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_public_keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_all_element_large"
            app:layoutManager="LinearLayoutManager" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_all_element_large"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/settings_private_keys"
            android:textSize="@dimen/size_subtitle_text_medium" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_private_keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_all_element_large"
            app:layoutManager="LinearLayoutManager" />

        <Button
            android:id="@+id/bt_export_all_public_keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_element_large"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/margin_all_element_large"
            android:background="@drawable/bt_login_rounded"
            android:text="@string/settings_export_all_public_keys"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_import_keys_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_element_large"
            android:layout_marginTop="@dimen/margin_all_element_large"
            android:layout_marginEnd="@dimen/margin_all_element_large"
            android:background="@drawable/bt_login_rounded"
            android:text="@string/settings_import_keys_text"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_import_keys_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_element_large"
            android:layout_marginTop="@dimen/margin_all_element_large"
            android:layout_marginEnd="@dimen/margin_all_element_large"
            android:background="@drawable/bt_login_rounded"
            android:text="@string/settings_import_keys_file"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/bt_generate_keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_element_large"
            android:layout_marginTop="@dimen/margin_all_element_large"
            android:layout_marginEnd="@dimen/margin_all_element_large"
            android:layout_marginBottom="@dimen/margin_all_element_large"
            android:background="@drawable/bt_login_rounded"
            android:text="@string/settings_generate_keys"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>