<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/all_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_all_element_largest"
        android:paddingRight="@dimen/margin_all_element_largest"
        android:text="@string/upgrade_plan_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_subtitle_text_medium"
        app:layout_constraintBottom_toTopOf="@+id/bt_upgrade_plan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />

    <Button
        android:id="@+id/bt_upgrade_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_element_largest"
        android:layout_marginEnd="@dimen/margin_all_element_largest"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bt_login_rounded"
        android:text="@string/upgrade_plan_upgrade_button"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/bt_back_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_element_largest"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/margin_all_element_largest"
        android:layout_marginBottom="72dp"
        android:background="@drawable/bt_gray_rounded"
        android:text="@string/upgrade_plan_back_button"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
